Added ranking as well as the cost estimate to the search space viz.

--- a/visualization/search-space/css/search-space.css
+++ b/visualization/search-space/css/search-space.css
@@ -10,7 +10,8 @@
     justify-content: flex-start;
 }
 
-.button-area button {
+.button-area button,
+.input-area input {
     padding: 10px;
     margin: 10px;
 }
