Some style changes for the search space viz.

--- a/visualization/search-space/css/search-space.css
+++ b/visualization/search-space/css/search-space.css
@@ -27,11 +27,12 @@
 }
 
 .node text {
-    font: 12px sans-serif;
+    font: 13px sans-serif;
+    font-weight: bold;
 }
 
 .link {
     fill: none;
     stroke: #cccccc;
-    stroke-width: 2px;
+    stroke-width: 10px;
 }
